infrastructure/waddle.cloud/gitops/livekit-redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: livekit-redis
  namespace: livekit
  labels:
    app.kubernetes.io/name: livekit-redis
    app.kubernetes.io/instance: livekit-redis
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: livekit-redis
    app.kubernetes.io/instance: livekit-redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
      protocol: TCP
